--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -34,7 +34,7 @@ jobs:
           TOKEN: ${{ secrets.TOKEN }}
         run: |
           git remote set-url origin https://github.com/${{ github.repository }}.git
-          git push origin HEAD:master
+          git push origin HEAD:main
       - uses: actions/upload-artifact@v4
         if: always()
         with:
