--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,10 +2,10 @@ name: Playwright Tests
 on:
   repository_dispatch:
     types: [test_result]
-  push:
-    branches: [main, master]
-  pull_request:
-    branches: [main, master]
+  # push:
+  #   branches: [main, master]
+  # pull_request:
+  #   branches: [main, master]
 jobs:
   test:
     timeout-minutes: 60
