--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "test:debug": "npx playwright test --debug",
     "test:ui": "npx playwright test --ui",
     "test:headed": "npm run test -- --headed",
-    "report:open": "npx playwright show-report"
+    "report:open": "npx playwright show-report",
+    "serve": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.43.1",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.12.7"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
