--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.43.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "faker": "^5.5.3"
   }
 }
