added chat test

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:debug": "npx playwright test --debug",
     "test:ui": "npx playwright test --ui",
     "test:headed": "npm run test -- --headed",
+    "test-chat": "npm run test chat.spec.ts --debug",
     "report:open": "npx playwright show-report",
     "serve": "node server.js"
   },
