--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "test": "npx playwright test",
     "test:debug": "npx playwright test --debug",
     "test:ui": "npx playwright test --ui",
-    "test:headed": "npm run test -- --headed",
-    "test-login": "npm run test login.spec.ts --debug",
-    "test-signup": "npm run test signup.spec.ts --debug",
-    "test-chat": "npm run test chat.spec.ts --debug",
-    "test-search": "npm run test search_user.spec.ts --debug",
+    "test:headed": "npx playwright test -- --headed",
+    "test-login": "npx playwright test login.spec.ts --debug",
+    "test-signup": "npx playwright test signup.spec.ts --debug",
+    "test-chat": "npx playwright test chat.spec.ts --headed",
+    "test-search": "npx playwright test search_user.spec.ts --debug",
     "report:open": "npx playwright show-report",
     "serve": "node server.js"
   },
