--- a/.github/workflows/trigger_update_on_ec2.yml
+++ b/.github/workflows/trigger_update_on_ec2.yml
@@ -14,6 +14,6 @@ jobs:
           node-version: lts/*
       - name: trigger update
         run: |
-          echo "$SSH_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh ~/.ssh/id_rsa root@122.248.203.166 'bash command.sh update'
+          echo "$SSH_KEY" > id_rsa
+          chmod 600 id_rsa
+          ssh id_rsa root@122.248.203.166 'bash command.sh update'
