--- a/.github/workflows/trigger_update_on_ec2.yml
+++ b/.github/workflows/trigger_update_on_ec2.yml
@@ -16,4 +16,4 @@ jobs:
         run: |
           echo "$SSH_KEY" > key.pem
           chmod 600 key.pem
-          ssh -i key.pem root@122.248.203.166 'bash command.sh update'
+          ssh -o StrictHostKeyChecking=no -i key.pem root@122.248.203.166 'bash command.sh update'
